RESOLVED FIXED46017
REGRESSION: alternating animation direction doesn't work on Windows
https://bugs.webkit.org/show_bug.cgi?id=46017
Summary REGRESSION: alternating animation direction doesn't work on Windows
Mihai Parparita
Reported 2010-09-17 17:25:38 PDT
Test case: http://persistent.info/webkit/test-cases/animation-alternate.html Expected result: gray box moves to the right and then back to the left. Actual result: gray box moves to the right, jumps back to the starting point, and then moves again to the right. This happens with both WebKit Window nightly builds and the Chromium canary channel. I haven't had a chance to narrow down the regression range, but it works as expected in the Safari 5.0.2 release but is broken as of r67637. Chromium noticed this breakage with r67098 (see bug 45512), though I don't see how that would affect Windows only.
Attachments
Patch (5.72 KB, patch)
2010-09-20 12:28 PDT, Simon Fraser (smfr)
aroben: review+
Simon Fraser (smfr)
Comment 1 2010-09-17 17:48:45 PDT
This works in my TOT mac build.
Adam Roben (:aroben)
Comment 2 2010-09-20 11:19:08 PDT
Added related test failures to the Skipped file in r67866. http://trac.webkit.org/changeset/67866
Adam Roben (:aroben)
Comment 3 2010-09-20 11:19:43 PDT
Simon Fraser (smfr)
Comment 4 2010-09-20 12:28:21 PDT
Simon Fraser (smfr)
Comment 5 2010-09-20 12:29:38 PDT
*** Bug 45512 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6 2010-09-20 13:19:40 PDT
Note You need to log in before you can comment on or make changes to this bug.