WebCore/platform/animation/Animation.h
@@ -84,7 +84,7 @@ public:
     double delay() const { return m_delay; }
 
     enum AnimationDirection { AnimationDirectionNormal, AnimationDirectionAlternate };
-    AnimationDirection direction() const { return m_direction; }
+    AnimationDirection direction() const { return static_cast<AnimationDirection>(m_direction); }
 
     unsigned fillMode() const { return m_fillMode; }
 
@@ -131,7 +131,7 @@ private:
     double m_delay;
     double m_duration;
     RefPtr<TimingFunction> m_timingFunction;
-    AnimationDirection m_direction : 1;
+    unsigned m_direction : 1; // AnimationDirection
     unsigned m_fillMode : 2;
 
     unsigned m_playState     : 2;
